--- a/website/contact us.html
+++ b/website/contact us.html
@@ -127,6 +127,11 @@
                 background-color: purple;
                 z-index:1;
             }
+            @media screen and (max-width: 999px) {
+      .hide-md {
+        visibility: hidden;
+      }
+    }
         </style>
     </head>
     <body>
@@ -174,35 +179,35 @@
         <img class="blob5"src="Blue.svg"></img>
         <!-- Tablet and Phone Navbar -->
         <nav class="navbar bg-custom navbar-dark">
-            <!-- Burger Menu Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Search Bar -->
-            <form class="form-inline mr-auto ml-1">
-                <div class="md-form my-0">
-                    <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
-                </div>
-                <button class="header-nav-searchButton" type="button" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
-            </form>
-            <!-- Login & Signup Buttons -->
-            <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
-            <a class="navbar-brand" href="sign up.html">Sign Up</a>
-            <!-- Burger Menu Links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#" onclick="fadein()">Login</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="sign up.html">Sign Up</a>
-                </li>    
-            </ul>
-            </div>  
-        </nav>       
+                <!-- Burger Menu Button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Search Bar -->
+                <form class="form-inline mr-auto ml-1">
+                    <div class="md-form my-0">
+                        <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
+                    </div>
+                    <button class="header-nav-searchButton" type="button" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+                </form>
+                <!-- Login & Signup Buttons -->
+                <a class="navbar-brand hide-md" href="#" onclick="fadein()">Login</a>
+                <a class="navbar-brand hide-md" href="sign up.html">Sign Up</a>
+                <!-- Burger Menu Links -->
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" onclick="fadein()">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="sign up.html">Sign Up</a>
+                    </li>    
+                  </ul>
+                </div>  
+              </nav>      
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
@@ -280,6 +285,7 @@
                         <div class="col-4  header-login">
                             <!-- Navbar brand -->
                             <button class="navbar-brand" onclick="fadein()">Login</button>
+                            <button class="navbar-brand"><a href="sign up.html">Sign Up</a></button>
                         </div>
                     </div>
                 </div>
