--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -671,7 +671,11 @@ body {
     justify-content: center;
     margin-bottom: 50px;
 }
-
+@media screen and (max-width: 999px) {
+      .hide-md {
+        visibility: hidden;
+      }
+    }
 </style>
 </head>
 
@@ -708,36 +712,36 @@ body {
 <!-- =======
     </div>  --> 
 <!-- >>>>>>> b51b9dce323bc2be2121839ce0617b1ed011391d -->
-    <nav class="navbar navbar-expand-md bg-custom navbar-dark">
-        <!-- Burger Menu Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Search Bar -->
-        <form class="form-inline mr-auto">
-            <div class="md-form my-0 header-search">
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
-            </div>
-        </form>
-        <!-- Login & Signup Buttons -->
-        <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
-        <a class="navbar-brand" href="sign up.html">Sign Up</a>
-        <!-- Burger Menu Links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" onclick="fadein()">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sign up.html">Sign Up</a>
-            </li>    
-          </ul>
-        </div>  
-      </nav>
+<nav class="navbar bg-custom navbar-dark">
+    <!-- Burger Menu Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Search Bar -->
+    <form class="form-inline mr-auto ml-1">
+        <div class="md-form my-0">
+            <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
+        </div>
+        <button class="header-nav-searchButton" type="button" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+    </form>
+    <!-- Login & Signup Buttons -->
+    <a class="navbar-brand hide-md" href="#" onclick="fadein()">Login</a>
+    <a class="navbar-brand hide-md" href="sign up.html">Sign Up</a>
+    <!-- Burger Menu Links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" onclick="fadein()">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sign up.html">Sign Up</a>
+        </li>    
+      </ul>
+    </div>  
+  </nav>
     <div class="flex1">
 
     <div class="flex">
