--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -676,68 +676,37 @@ body {
 </head>
 
 <body>
-    
-    <!-- <img id="blob1"class="img-responsive"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img> -->
-   <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <!--Pictures-->
-        <!-- <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100 picture-1" alt="">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 picture-2" alt="">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100 picture-3" alt="">
-<<<<<<< HEAD
-            </div> -->  
-
-            
-            <!--Buttons-->
-             <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-<<<<<<< HEAD
-    </div>  -->
-<!-- =======
-    </div>  --> 
-<!-- >>>>>>> b51b9dce323bc2be2121839ce0617b1ed011391d -->
-    <nav class="navbar navbar-expand-md bg-custom navbar-dark">
-        <!-- Burger Menu Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Search Bar -->
-        <form class="form-inline mr-auto">
-            <div class="md-form my-0 header-search">
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
-            </div>
-        </form>
-        <!-- Login & Signup Buttons -->
-        <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
-        <a class="navbar-brand" href="sign up.html">Sign Up</a>
-        <!-- Burger Menu Links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" onclick="fadein()">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sign up.html">Sign Up</a>
-            </li>    
-          </ul>
-        </div>  
-      </nav>
+    <!-- Tablet and Phone Navbar -->
+    <nav class="navbar bg-custom navbar-dark">
+      <!-- Burger Menu Button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Search Bar -->
+      <form class="form-inline mr-auto ml-1">
+          <div class="md-form my-0">
+              <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
+          </div>
+          <button class="header-nav-searchButton" type="button" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+      </form>
+      <!-- Login & Signup Buttons -->
+      <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
+      <a class="navbar-brand" href="sign up.html">Sign Up</a>
+      <!-- Burger Menu Links -->
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" onclick="fadein()">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sign up.html">Sign Up</a>
+          </li>    
+        </ul>
+      </div>  
+    </nav>
     <div class="flex1">
 
     <div class="flex">
