--- a/website/home.html
+++ b/website/home.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="css/carousel-design.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/imagehover.min.css">
+  <link rel="stylesheet" href="css/contact.css">
   <script src="js/header.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -1112,12 +1113,15 @@
                     <div class="post sec">
                       <img class="card-img-mid" src="photos/picnic.jpg" alt="Card image cap">
                     </div>
-                    <div class="post sec">
+                    <div class="row justify-content-center mt-5">
+                      <a class="btn btn-purple-dark" href="feature-artist.html">Visit Artist</a>
+                    </div>
+                    <!-- <div class="post sec">
                       <img class="card-img-mid" src="photos/natatorium.jpg" alt="Card image cap">
                     </div>
                     <div class="post sec">
                       <img class="card-img-mid" src="photos/family-.jpg" alt="Card image cap">
-                    </div>
+                    </div> -->
                   </div>
                   <div class="fabs">
                     <div id="fabs1" class="fab"></div>
@@ -1154,11 +1158,8 @@
                     <div class="post sec">
                       <img class="card-img-mid" src="photos/totown.jpg" alt="Card image cap">
                     </div>
-                    <div class="post sec">
-                      <img class="card-img-mid" src="photos/tinikling.jpg" alt="Card image cap">
-                    </div>
-                    <div class="post sec">
-                      <img class="card-img-mid" src="photos/fruitpick.jpg" alt="Card image cap">
+                    <div class="row justify-content-center mt-5">
+                      <a class="btn btn-purple-dark" href="feature-artist.html">Visit Artist</a>
                     </div>
                   </div>
                   <div class="fabs">
@@ -1196,11 +1197,8 @@
                     <div class="post sec">
                       <img class="card-img-mid" src="photos/accordionist.jpg" alt="Card image cap">
                     </div>
-                    <div class="post sec">
-                      <img class="card-img-mid" src="photos/avignon.jpg" alt="Card image cap">
-                    </div>
-                    <div class="post sec">
-                      <img class="card-img-mid" src="photos/blue-nude.jpg" alt="Card image cap">
+                    <div class="row justify-content-center mt-5">
+                      <a class="btn btn-purple-dark" href="feature-artist.html">Visit Artist</a>
                     </div>
                   </div>
                   <div class="fabs">
