--- a/website/contact us.html
+++ b/website/contact us.html
@@ -200,10 +200,10 @@
             </div>
         </div>
         <!-- <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img> -->
-        <img class="blob2"src="Background.svg"></img>
+        <!-- <img class="blob2"src="Background.svg"></img>
         <img class="blob4"src="Blue.svg"></img>
         <img class="blob3"src="yellow.svg"></img>
-        <img class="blob5"src="Blue.svg"></img>
+        <img class="blob5"src="Blue.svg"></img> -->
         <!-- Tablet and Phone Navbar -->
         <nav class="navbar bg-custom navbar-dark">
             <!-- Burger Menu Button -->
