--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -31,6 +31,7 @@
                 font-family: 'Poppins', sans-serif;
                 background-color: pink;
                 margin: 0px;
+                overflow-x: hidden;
             }
         
             p {
