--- a/website/contact us.html
+++ b/website/contact us.html
@@ -346,7 +346,7 @@
                                             <h4 class="card-title">Press</h4>
                                             <p class="card-text">Are you interested in our
                                                 latest news or working on
-                                                a Grammarly story and
+                                                an Ozweebo art and
                                                 need to get in touch?
                                             </p>
                                             <button type="button" class="mb-4 btn btn-block btn-purple-outline" data-toggle="modal" data-target="#myModal">
