--- a/website/contact us.html
+++ b/website/contact us.html
@@ -65,6 +65,7 @@
             .flex1{
                 display:flex;
                 flex-direction: column;
+                height: 100%;
             }
             
             .btn:hover{
